--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -19,3 +19,6 @@
 </div>
 
 
+<!-- ajouter une colonne image à ma table cocktails -->
+<!-- ajouterun input avec le champ url_image -->
+<!-- voir pour le questionnaire -->
