--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -34,3 +34,19 @@
   font-size: 48px;
   font-weight: bold;
 }
+
+.banner_new {
+  background-size: cover;
+  background-position: center;
+  padding: 200px 0;
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), asset-url('ingredient.jpg');
+  margin-bottom: 20px;
+}
+
+.banner_new h1 {
+  margin-bottom: 20px;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 48px;
+  font-weight: bold;
+}
