trying to push it on heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,29 @@
     <%= yield %>
 
 
+<footer>
+<div class="container">
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+    This website is made with 🍹 at Le Wagon
+  </div>
+</div>
+</div>
+
+  <!-- Footer -->
+
+  <div class="footer-copyright text-center py-2">© 2019 Copyright:
+    <a href="https://mdbootstrap.com/education/bootstrap/"> about-last-night.com</a>
+  </div>
+</footer>
+
 
   <%= javascript_include_tag "application" %> <!-- from app/assets/javascripts/application.js -->
   <%= javascript_pack_tag "application" %>    <!-- from app/javascript/packs/application.js -->
